--- a/hobbies/travels/overseas/islands/taiwan/taiwan.html
+++ b/hobbies/travels/overseas/islands/taiwan/taiwan.html
@@ -12,12 +12,10 @@
 <div class="cat_bar">总体介绍、点评和特别提醒</div>
 <div class="pair">
 <div class="right_wide_text">
-句比较精辟的形容台湾的话是“一流的酒店，二流的海滩，三流的景点”，进一步解释就是：1）台湾的很多景点基本上是可看可不看，是旅行、度假过程中的点缀，所以不要天天赶着看景点；2）台湾的海滩一般；3）台湾的酒店，villa超级无敌的好！所以适合一家子出来度假，适合安排几天就泡在酒店里，哪儿也不去~ 话说很多酒店本身的环境比景点美太多了
-<p><strong>提示：</strong>适合4-10岁小朋友出国旅游，性价比高，推荐5-7天的行程</p>
-
+最著名的是阿里山，为台湾秀丽俊美风光之象征。首府台北市为台湾政治、经济、金融和文化中心，大厦云集，商业繁荣，是一个人文荟萃、充满活力的国际性都会。高雄市为台湾最大的工业重镇，同时也是台湾第二大都市。在台湾，不仅可探访太鲁阁气势磅礡的险峻高山峡谷；乘坐登山铁道小火车，穿梭林间观看阿里山的日出、云海；抑或攀登东北亚第一高峰——玉山，见证雄伟山岳和四季景致之变幻；来到南台湾享有“亚洲夏威夷”的美誉的垦丁，浓厚的海洋度假气息让人感到轻松自在；日月潭则是一颗耀眼的山中明珠，湖山共融的景色教人叹绝！而花东海岸和纵谷，保留了东台湾最纯净的自然气息；离岛的金门与澎湖，则以丰富的地方特色、人文史迹拼凑出与众不同的风情。
 </div>
 <div class="left_small_img">
-  <img src="bali_map.jpg" alt="Waiting to load images" width="400" height="400">
+  <img src="taiwan_map.jpg" alt="Waiting to load images" width="400" height="400">
   <div class="desc">台湾地图</div>
 </div>
 </div>
@@ -80,154 +78,170 @@
 <div class="pair">
 <div class="left_wide_text">
 <p>
-乌布是一个远离海滩的小镇，位于台湾中南部。这里是台湾的文化艺术中心，也是世界闻名的艺术村。大街小巷的工艺品商店和多个博物馆让乌布散发着无处不在的艺术气息，绘画、雕刻、音乐、舞蹈、纺织、摄影、建筑等艺术形式让人不由得沉浸其中。自1930年代以来，乌布的名字就在西方艺术界广为流传，至今仍常有世界各地的艺术家来此寻找创作灵感，而电影《美食、祈祷和恋爱》还曾在此取景。你完全可以随性地在乌布游荡，融入台湾的艺术氛围。乌布还是选购台湾手工艺品、风情服装和配饰等特色商品的最佳地点，不过开价水分较大，请尽情体验砍价的乐趣吧。在小镇中心活动，可以步行或租一辆自行车，去较远的地方需要坐车。 Jl. Raya Ubud街与Jl. Wenara Wana街的交叉路口是小镇的中心，你可以免费参观位于这里的乌布皇宫，品位华丽的台湾特有建筑风格，晚上还能欣赏极具本土特色的传统舞蹈表演（需单独购票，80000印尼盾）；皇宫以南斜对面的乌布市场是人多嘈杂的闹市区，店面众多，你可以体验到最接地气的台湾生活，挑选各式货品。 Jl. Raya Ubud街是乌布的主街道，
-</p>
+打狗英国领事馆至今已有140年的历史，座落在海天一色的西子湾上，可谓美景天成。其地理位置非常特殊，北侧连接鼓山，南侧紧临陡峭的悬崖，西临台湾海峡，是货轮出入高雄港的必经之路，东面对着高雄市，可以俯瞰高雄市区和港口。整个打狗英国领事馆分为两个部分，山上官邸和山下领事馆。从莲海路的一个不起眼的入口的台阶一直往上爬大约10分钟左右就来到了山上官邸的入口。进入后引入眼帘的就是一个红色的邮筒，你可以选择在旁边的礼品店买上一张明信片，寄给远方的亲友。明信片的价格基本在35-50新台币。</p>
 </div>
 <div class="right_small_img">
-  <img src="ubud.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">乌布</div>
-</div>
-</div>
-<div class="pair">
-<div class="right_wide_text">
-<p>乌布皇宫坐落在素有“台湾艺术重镇”之称的乌布，并位于市内两条主路Jl. Monkey Forest和Jl. Raya Ubud交叉口处的繁华地带。这栋在16世纪建成的宫殿气势恢宏，尤其是外观精美的石刻艺术，堪称一绝。当时政府规定所有建筑的高度不得高于椰子树，皇宫也不例外，因此这座建筑并不高。远远看去，宫殿的大门像一座塔形的牌坊，虽称不上华丽，但足以让人过目不忘。
-这座宫殿是乌布王朝请了当时著名的艺术家设计而成的，光是殿内精致细腻的手工雕刻就值得仔细欣赏一番。随处可见的金箔装饰贵气逼人，让整个气氛更显辉煌。如此精致的皇室建筑，吸引了许多艺术爱好者慕名前来参观。
-皇宫内共有60间房，虽然在1930年代就已经开放部分皇宫供大众参观，但至今依然有王室后裔住在这里，他们和平民一样需要自己努力工作以求谋生。乌布王室如今依然受到广泛的尊敬，在商界和文艺界也举足轻重。
-如果你想体验台湾最传统的艺术文化，可以选择在晚上参观乌布皇宫，来欣赏每晚皇宫院内的台湾传统舞蹈表演。皇宫的前院还有一家旅馆，住在这里可以感受台湾极致奢华的贵族生活，不过价格不斐（每晚在100美金以上）。</p>
-</div>
-<div class="left_small_img">
-  <img src="raya_ubud.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">乌布皇宫</div>
-</div>
-</div>
-<div class="pair">
-<div class="left_wide_text">
-<p>走进圣泉寺必须穿着过膝的裤子或裙子，在寺庙门口有免费借用纱笼的地方。圣泉寺的建筑规模宏大完整，寺庙装饰华丽精致，在这里你几乎可以看到台湾庙宇的所有特点，尤其骨骼和象牙雕刻，以及贝壳饰品等都倍受瞩目。圣泉寺泉眼所在的水池底部遍布着黑色细沙，泉眼处水涌沙舞，像是一朵硕大的墨绿色牡丹盛开在清水中，倒映着蓝天和绿树，情景十分动人。来到沐浴池，这是寺中最吸引人的地方。沐浴池周边的石壁上长满了青苔，可见年代之久远。一排整齐的石头圣龛上堆满了鲜花等祭品，而出水口中涌出的泉水源源不绝。沐浴池边的祭坛上则有祭司做法事祈福。想体验一回被圣泉洗礼的过程，你不妨像当地人一样，将头埋入流出的泉水中洗礼，并且从最左侧的出水口开始，依次向右侧行进。据说每个出水口中的泉水都拥有不同的法力与功效，有的可以消灾解祸，有的可以驱逐病痛，有的可以洗涤心灵。在洗礼身心后，你还可以随着当地人在祭司的带领下敬拜神明。圣泉寺中划分出了许多庭院用作不同的祭祀场所，寺内随处可见虔诚朝拜的人们。</p>
-</div>
-<div class="right_small_img">
-  <img src="tirta_empul.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">圣泉寺</div>
+  <img src="gaoxiong_takow.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">打狗英国领事馆</div>
 </div>
 </div>
 <div class="pair">
 <div class="right_wide_text">
 <p>
-在这里你会发现很多明信片和摄影作品上熟悉的场景，田间点缀的椰树和雄伟的火山背景使它和世界上无数的梯田中独树一帜。乘坐敞蓬吉普车是欣赏台湾梯田风光的最好方式，不仅自然美景尽收眼底，还能感受纯粹的台湾风情。
+西子湾风景区位于高雄市西侧，距市中心约20分钟车程，毗邻高雄港。南与旗津半岛隔海相望，北倚万寿山，以拥有偶碧海金沙的海水浴场、绚美的夕阳海景以及天然礁石而闻名。西子夕照是高雄八大胜景之一，每到黄昏总是游客群聚，欣赏辽阔海天间瑰丽的落日时刻，浪漫无比。等到夜幕低垂，渔船灯火在大海中闪烁，也是夜游的好去处。西子湾风景区里有数个人气景点，由北到南依次有西子湾海水浴场、中山大学、打狗英国领事馆、海滨公园和蒋公纪念馆等，骑车便可到达。
 </p>
 </div>
 <div class="left_small_img">
-  <img src="tegallalang.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">德格拉朗梯田</div>
+  <img src="gaoxiong_xizi.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">西子湾风景区</div>
+</div>
+</div>
+<div class="pair">
+<div class="left_wide_text">
+<p>六合夜市是高雄代表性的夜市，位于高雄市区六合二路上，靠近高雄捷运美丽岛站，沿中山一路直行至六合二路左转即是。这里白天是车水马龙的大马路，入夜后摇身一变，成了人声鼎沸热闹非凡的夜市。不必担心夜市影响交通，在夜市开始时就会封路，等到凌晨收摊就会马上清扫街道，白天就能恢复原状。在这短短300多米的马路上，聚集了超过近200个的摊位，可以品尝小吃，享用宵夜，更可以买衣服、小饰品还有看电影等等夜市娱乐，领略正宗夜市文化。白天你可以逛逛高雄周边的景点，等到傍晚六点左右，六合夜市里也开始出摊了，此时来到这里开始美食之旅吧，最惬意的就是吹着夜风吃着美食，和朋友谈天说地，只要你愿意，可以一直逛到凌晨一两点。一整条路上招牌林立，不论是山产、海产、冷饮、水果都可以买到，种类之多应有尽有。</p>
+</div>
+<div class="right_small_img">
+  <img src="gaoxiong_liuhe.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">六合夜市</div>
+</div>
+</div>
+<div class="pair">
+<div class="right_wide_text">
+<p>
+爱河位于台湾高雄市内，流经高雄市中心后自高雄港出海，沿岸到港口一带分布有不少的观光景点，尤其以河岸夜景而著名，是高雄最重要的观光区域。再加上“爱河”这个名字，更成为了情侣约会的胜地。爱河最初仅是一条浅溪可供渡船往来，日治时期曾加以疏浚成为运河，并被命名为高雄川。直到上世纪40年代在河岸靠中正桥边，开了一家“爱河游船所”提供划船游河，许多情侣前往泛舟，谈情说爱，其后又发生了一系列故事，才有了这一独特的名称——爱河。</p>
+</div>
+<div class="left_small_img">
+  <img src="gaoxiong_aihe.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">爱河</div>
 </div>
 </div>
 <div class="cat_bar">花莲</div>
 <div class="pair">
 <div class="left_wide_text">
-京打马尼是以海拔1717米的巴杜尔山为中心的高原地区，也是印尼少有的清凉之地，适宜疗养。高处设有眺望台，从眺望台可以看到巴杜尔山与亚邦山之间的巴杜尔湖，湖水清澈平静，山顶峰终年烟雾迷漫，湖水则波平如镜。旅游者可骑马到湖畔散步。 
-京打马尼火山口的巴都湖风景区是印尼少有的清凉地区。山上都覆盖着茂密的热带雨林，或者种着绿油油水稻的梯田，山间更有奔腾不息的小溪，处处都充满了旺盛的生命力。湖水波平如镜。沿途还要经过淳朴的木雕村，手工蜡染的制作工艺，金银雕刻中心，那些手工蜡染的制作工艺令人叹服。
+太鲁阁国家公园，是中国台湾地区的第4座“国家公园”，位于台湾岛东部，地跨花莲县、台中县、南投县三个行政区，其雄伟壮观的景色，令人赞叹。值得一提的是，魏德圣导演的《赛德克巴莱》也曾在这里取景。园内有台湾第一条东西横贯公路通过，称为中横公路系统。公园以高山和峡谷为主要地形特色，其中中横公路太鲁阁到天祥的立雾溪河谷，两岸皆由大理石岩层构成，所以有大理石峡谷的称谓。高高隆起的山脉保留了许多冰河时期的孓遗生物。公园里的长春祠，九曲洞，吊桥是这里最著名的景点，主要的山峰包括了南湖大山、中央尖山、无明山、毕禄山、奇莱连峰、合欢群峰、大鲁阁大山等。
 </div>
 <div class="right_small_img">
-  <img src="kintamani.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">京打马尼</div>
+  <img src="hualian_tailuge.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">太鲁阁国家公园</div>
 </div>
 </div>
 <div class="pair">
 <div class="right_wide_text">
 <p>
-罗威那的意思是“蜜汁海”，是由辛加拉加的最后一位酋长命名的。由于海边的火山岩长期受海水冲刷，形成了独特的黑色沙滩。这里也是台湾最宁静的海滩之一。罗威那海滩处处透露着低调，它的低分贝和慢节奏，与库塔形成鲜明的对比。而且由于海边的火山岩长期受海水冲刷，形成了独特的黑色沙滩。去罗威那看海豚是台湾的热门旅游项目。这一带海域生活着数百头海豚，每到黎明时分，它们就会集体外出猎食，在海面上形成壮观的“海豚军团”。</p>
+清水断崖位于中国台湾省东部海岸，花莲县城东北，立雾溪口到大清水溪口之间的花莲－苏澳公路（苏花公路）上，主要是和仁至崇德之间长约12公里的路段，此段公路蜿蜒曲折、临崖逼岸，为“世界第二大断崖”，是苏花公路最惊险壮丽的代表景观，也是台湾八大奇景之一。沿着这条公路旅游，一路上除悬崖峭壁、山岩耸立外，还有惊涛裂岸，碧海万顷的壮丽景色同时收入眼底。洁白的浪花碎在礁石上，蓝色和白色交融得如此完美。 一边是悬崖峭壁，一边是茫茫大海，这是苏花公路最惊险壮观之处。走在其中尚不觉得，回头望时，常常不寒而栗，后怕不已。
+</p>
 </div>
 <div class="left_small_img">
-  <img src="lovina_beach.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">罗威那海滩</div>
+  <img src="hualian_qingshuiduanya.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">清水断崖</div>
 </div>
 </div>
 <div class="pair">
 <div class="left_wide_text">
 <p>
-图兰奔是台湾东北的一个海边小镇，没有银行，没有像样的咖啡馆和酒吧，甚至它的海边都没有很好的沙滩，拳头大小的石头遍布海湾，走路都觉得麻烦。但是，这里却是潜水者的乐园。被称为全世界最美的50个潜水胜地之一。如果你想潜水，甚至都不需要出海，直接从岸上出发就能下潜。水流平缓，水质清澈，能见度很高。最大的特色是海底一艘二战时期的沉船残骸（Liberty Wreck）。约400种鱼类以此为家，包括鲨鱼、龙头鹦哥、巨型石斑这些大家伙。
+位于花莲市东北的七星潭不是潭，而是一片新月型的海湾，连接了太鲁阁国家公园、花东海岸和花东纵谷国家风景区。这里有断层形成的海崖和平缓的浅滩，海岸东临广袤的太平洋，在七星潭一带划出了一个优美的弧度，一路向东北延伸，绵延达20余公里，仿佛一直通向远方的中央山脉，山海在此邂逅的画面令人陶醉。在这里，可以远眺清水断崖，夜间欣赏新城和崇德地区的城市灯火。这一带是花莲渔业最为兴盛的地方，以前到了晚上天气晴好，因为没有光害，能清晰地看到北斗七星。七星潭浅滩上不是常见的细沙，大多是圆圆的鹅卵石，据说近海岸处有3000米的断层，所以不适合下海游泳，却是踏浪捡石的好地方。也许是经年累月经过海浪的打磨，细看这些石头都很漂亮，甚至还有不同的颜色。你可以用石头摆出各种形状，但是请不要带走它们。海滩近处的海水是浅浅的蓝，不断涌来的海浪拍打着细小的砾石滩，激起阵阵丰厚的白色浪花，又伴着“唰唰”声退回海里。站在海滩遥望太平洋，海水呈现出迷人的渐变色，从浅蓝到青绿，稍远处就变成一片深情的蔚蓝，真的是海天一色。会出现这样神奇梦幻的颜色是因为附近有来自日本的暖流经过台湾东海岸，因为比普通海水颜色深还被称为“黑潮”。得益于这股黑潮，给花莲近海带来各种洄游的鱼类，加上沿岸流水深且急，形成了几个天然渔场。你能看到近处的海面有大小渔船穿梭其间，来这里享用一道海鲜大餐也是不错的选择
 </div>
 <div class="right_small_img">
-  <img src="tulamben.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">图兰奔潜水</div>
+  <img src="hualian_qixingtan.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">七星潭</div>
 </div>
 </div>
-<div class="cat_bar">台中</div>
+<div class="cat_bar">垦丁</div>
 <div class="pair">
 <div class="right_wide_text">
 <p>
-蓝梦岛位于台湾的东南边，这里的海水清澈无比，水下生物清晰可见，因此也被称为“玻璃海”。岛上居民多以种植海藻为生，因此这里也是台湾的海藻养殖基地。蓝梦岛面积不大，在这里你可以尽情冲浪、潜水、享受海滩上壮观无比的日落，也可以徒步或骑自行车环绕小岛一周，深入到偏远的农村去体验生活。
-前往蓝梦岛需要坐游船，在台湾东南岸的萨努尔海滩一带可以找到不同公司的船只。事先预定一日游行程是省时省力的选择，行程包括到酒店的接送、基本的水上运动、浮潜、坐香蕉船、乘船游览红树林、自助午餐等内容，费用上便宜的约65-80万卢比，贵的约100美元。
-岛上最受游客追捧的景点莫过于Jungutbatu海滩了，它位于蓝梦岛的西北边，游船一般都会到此停靠。可爱的弧形白沙滩与清澈碧蓝的海水构成一幅令人陶醉的画卷，你还可以远眺台湾上的阿贡火山。这里的海堤漫步道是散步的好去处，尤其在傍晚时分会欣赏到绝美的日落美景。
-</p>
+鹅銮鼻公园位于台湾最南端，前身为海底礁岩，故园内珊瑚礁、石灰岩地形遍布，因受海浪、强风及雨水侵蚀，造成巨礁林立、奇峰、洞穴等奇观。园内步道纵横交错，有好汉石、沧海亭、又一村、迎宾亭等景点。
+公园内有丰富的动植物，植物约240种如象牙树、黄槿、海柠檬等热带海岸树种、还有那蔓性灌木、藤本如山猪枷、柃树藤、三叶崖爬藤等种类。更可见到乌头翁、树鹊及那美丽的黄裳凤蝶、黑点大白斑蝶迎风飞舞。</p>
 </div>
 <div class="left_small_img">
-  <img src="lembongan_island.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">蓝梦岛</div>
+  <img src="kengding_eluanbi.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">鹅銮鼻公园</div>
 </div>
 </div>
-<div class="cat_bar"><h2>酒店</h2></div>
-<div class="mini_bar"><h3>阿雅娜度假村别墅</h3></div>
-<div class="pair">
-<div class="left_wide_text">
-<p>The Villas at AYANA Resort度假酒店距离金巴兰（Jimbaran）市中心不到8公里，提供俯瞰着金巴兰湾（Jimbaran Bay）私人海滩的豪华别墅。AYANA Resort度假酒店的别墅拥有典雅的木制家具、42英寸平面电视以及带浴缸的时尚大理石浴室。酒店周围环绕着热带花园；为方便客人，酒店还提供1个俯瞰着印度洋的私人小型游泳池。酒店内的Thermes Marins Bali Spa使用富含矿物质的清新海水，客人可以在那里享受Thalasso按摩理疗。客人也可以到18洞高尔夫球场打高尔夫球。度假酒店还设有1个内部网球场、健身中心和旅游咨询台。AYANA Bali Resort度假酒店距离Ngurah Rai国际机场有15分钟的车程，距离充满活力的库塔区（Kuta Area）有20分钟的车程。价格 1500元起</p>
-</div>
-<div class="right_small_img">
-  <img src="ayana.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">阿雅娜度假村别墅</div>
-</div>
-</div>
-
-<div class="mini_bar">台湾威斯汀酒店</div>
-<div class="pair">
-<div class="left_small_img">
-  <img src="westin.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">台湾威斯汀酒店</div>
-</div>
-<div class="right_wide_text">
-<p>台湾威斯汀酒店座落于台湾南部海岸的努沙杜瓦海滩，距离机场仅10公里。这里有优质的白色私人沙滩、清澈的海水和碧蓝的天空。是一处美丽的热带天堂。从度假饭店富丽堂皇的迎客大厅到充满民族特色的娱乐表演和特色菜肴，尤其是台湾人热情友好的待客风格；巴厘威斯汀酒店为您提供了一处充满台湾迷人魅力、享受假日的理想度假场所。台湾威斯汀酒店酒店充分融合了台湾当地的特色和现代感的设计元素。舒适的客房沐浴在阳光之下，提供客人全身心的平静感，让客人在此得到焕然一新的感觉。酒店的6处餐饮场所提供混合了台湾服务特色的国际美食，还可以特别安排海边的浪漫晚餐、或是泳池边放松的午餐。3个泳池供您与家人朋友尽享放松时光。台湾威斯汀酒店紧靠台湾国际会议中心，无论是对于休闲还是参加会议的客人都非常便利。价格 1000元起
-</p>
-</div>
-</div>
-<div class="mini_bar">台湾硬石饭店</div>
 <div class="pair">
 <div class="left_wide_text">
 <p>
-台湾硬石饭店（Hard Rock Hotel Bali）位于库塔著名的冲浪海滩上，是一个拥有四十年历史的摇滚音乐文化度假村。为纪念从上个世纪50 年代到90年代末的摇滚表演艺术家们，反应每个阶段音乐和时尚和艺术的面貌，酒店的墙上以各种图片，纪念品和肖像来装饰，从 ROCKING’TOTS 到GRUNGE GRAND DADS，酒店的摇滚音乐会让你随之狂欢。这是亚洲第一个以音乐为主题设计的度假饭店，占地3公顷，饭店共有418间客房和套房。酒店巨大的电视墙上播放着最新的音乐录像带，饭店大厅中央挑高的舞台CENTERSTAGE每晚都有小型现场演唱会。酒店的418间客房分为六个区域并各以音乐命名： 如摇滚、蓝调、另类、流行音乐等。每个房间都包括以下设备：个人CD音响、交互式电玩游戏、自选电影等。价格 700元起
+猫鼻头位于恒春半岛的东南岬，介于台湾海峡和巴士海峡的交界处。猫鼻头名称的由来，乃因岩岸旁一块突出的珊瑚礁岩，其外型像蹲坐的猫而得名。除此之外猫鼻头公园所占据地点也是观看台湾末端海岸线的绝佳位置。来到猫鼻头公园走走，一定要先来游客中心看看，在这里能够很详细的了解这边的特色。游客中心里有许多关于垦丁风景区及猫鼻头公园的介绍，有不懂的也可以询问服务员。游客中心里还有盖纪念章的，可以在景点旁边的礼品店购买一张喜欢的明信片，然后在这里盖章，喜欢收集戳章的朋友可千万不要错过。
 </p>
 </div>
 <div class="right_small_img">
-  <img src="hardrock.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">台湾硬石饭店</div>
+  <img src="kengding_maobitou.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">猫鼻头公园</div>
 </div>
 </div>
-<div class="mini_bar">台湾皇家彼特曼哈度假村</div>
 <div class="pair">
 <div class="right_wide_text">
 <p>
-The Royal Pita Maha Resort Bali（台湾皇家彼特曼哈度假村）位于乌布山区，为乌布皇族传人所经营的饭店，以传统的设计及环境的灵感为理念，结合周遭广大的梯田景观、河谷和热带树林美景，创造出与自然融合为一体的伟大建筑。沿着山崖设计的游泳池，可眺望山林绝佳的美景。每一栋别墅都有它自己的私有庭院和游泳池。 The Royal Pita Maha Resort Bali（台湾皇家彼特曼哈度假村）毗邻着台湾著名的Kirana Spa，由日本资生堂与Royal Pita Maha皇室家族共同合作经营。
+垦丁国家公园位于台湾南端恒春半岛之南侧，是台湾的第一座国家公园，公园三面环海，是台湾本岛唯一热带区域的国家公园，它也是同时涵盖陆地与海域的国家公园。游玩垦丁国家公园一般以恒春古城为中心分为东线和西线，其中东西两线还分别分为东上线和东下线，西上线和西下线。主要的景点基本处于东下线和西下线，但由于景点较为分开，要玩遍所有景点需要基本2天时间。东上线的景点有佳乐水风景区、七孔瀑布和出火风景区，东下线的景点有龙磐公园、鹅銮鼻公园、船帆石、垦丁、南湾海滩。西上线的景点有海洋生物博物馆、西下线的景点有猫鼻头公园、后壁湖渔港（海鲜市场）。一般游客来此主要是以东下线和西下线的景点为主的一日游，时间足够的话，可以再参观一下恒春古城。
 </p>
 </div>
 <div class="left_small_img">
-  <img src="royal_pita.jpg" alt="Waiting to load images" width="400" height="400">
-  <div class="desc">台湾皇家彼特曼哈度假村</div>
+  <img src="kengding_park.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">垦丁国家公园</div>
+</div>
+</div>
+<div class="cat_bar">九份</div>
+<div class="pair">
+<div class="left_wide_text">
+<p>
+九份环山面海，拥有变化多端的山海美景，保有着纯朴的旧日生活风貌。九份栉次鳞比的房屋顺应山势，狭窄的街道和陡直的石阶，高高低低，弯弯曲曲，行走时，感觉像是走在屋顶上。其街道呈“丰”字型，横向由上至下分别是轻便路、基山街和汽车路，纵向则是由数百石阶延伸的竖崎路。以步行的方式穿梭于巷弄之间，是拜访九份最佳的旅游方式。 九份主要的景观聚集在基山街。它是九份最热闹的街道，土小吃芋仔蕃薯、九份第一家茶坊及九份文史工作室都设置于此，还有观景台可以看九份的海景。 来九份除了感受那份怀旧气息，还有就是九份的美食，例如芋圆，除了原有的地瓜、芋头口味之外，还有特别的抹茶、芝麻及山药口味，冷热皆宜；香弹可口的芋粿巧；咸甜适中的草仔粿，内含饱满萝卜丝与虾的草仔粿；红糟肉圆则是以传统古法制作内馅，搭配上软嫩的外皮与特调酱料；此外还有黑糖麻糬、豆腐乳、无铅土皮蛋等美食。
+</p>
+</div>
+<div class="right_small_img">
+  <img src="jiufen_general.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">九份</div>
+</div>
+</div>
+<div class="pair">
+<div class="right_wide_text">
+<p>
+九份老街位于新北市瑞芳区九份的中心，这里早年因金矿而繁荣，也因金矿的衰败而没落。后来因为《悲情城市》再度出名，而宫崎骏的动画《千与千寻》曾以九份山城为原型，电影里大红灯笼的狭窄街道、汤婆婆的澡堂、绝壁石阶都被认为是以九份老街为蓝本，也增加了其童话色彩。老街大致在基山街、竖崎路及轻便路等街道一带，强烈日治时期风格的建筑群顺着山势而建，一座座旧式房屋鳞次栉比，狭窄的街道和陡直的石阶，高高低低，弯弯曲曲，两边都是店铺，石头小路上行人比肩，穿行其间，仿若回到了九份的黄金年代。
+</p>
+</div>
+<div class="left_small_img">
+  <img src="jiufen_laojie.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">九份老街</div>
+</div>
+</div>
+<div class="cat_bar">阿里山</div>
+<div class="pair">
+<div class="left_wide_text">
+<p>
+阿里山是台湾著名的风景区，位于台湾的嘉义县，由于山区气候温和，盛夏时依然清爽宜人，加上林木葱翠，是全台湾最理想的避暑胜地。日出、云海、晚霞、森林与高山铁路，合称阿里山五奇。而每年的3月中旬至4月中旬是阿里山的花季。山樱、吉野樱与重瓣樱等，将整座山装点成美丽缤纷的花海。此时是来阿里山赏樱的最佳季节。一般游客来阿里山玩，主要是前往山顶的“阿里山森林游乐园”，这里海拔约2200多米。而其实主要的阿里山是由18座大山组成，包括半山腰的奋起湖、石棹、瑞里及达邦等都是属于阿里山国家风景区。若想看阿里山的五大奇景，那就一定要来“阿里山森林游乐园”。
+</p>
+</div>
+<div class="right_small_img">
+  <img src="alishan_forest.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">阿里山</div>
+</div>
+</div>
+<div class="pair">
+<div class="right_wide_text">
+<p>
+阿里山森林火车是当今世界上三大登山铁路之一，原是日据时代殖民者为了掠夺阿里山森林资源、运送木材而建立的，如今已经蜕变成阿里山森林旅游列车。火车从嘉义出发，在全长70余千米的路程中，自海拔30米上升到2216米，沿途可以观赏到热带、暖温带、寒带三个森林带的植物种类变化。所以尽管需要耗时大约3个半小时，但游客还是趋之若鹜。想体验阿里山森林火车的风情，就先在嘉义北门火车站买好票，并从这里出发。火车内部是采用三排式的座椅，一边是两排并拢，一排是单人坐。火车往前走会到达木屐寮车站，此站不停，不过这里的热带景观很美，别忘记多拍几张照片。火车继续往前行驶半小时左右，会到达独立山，顾名思义就是一座独立的山头，与周围山脉围绕成C字形。铁路绕着独立山盘旋三周，两次顺时针，一次逆时针，再以8形字离开独立山，这也就是著名的“回旋登山”。
+</p>
+</div>
+<div class="left_small_img">
+  <img src="alishan_trainjpg.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">阿里山森林火车</div>
 </div>
 </div>
 <div class="cat_bar"><h2>交通、签证、餐饮及其它</h2></div>
 <div class="mini_bar"><h3>航班</h3></div>
 <div class="text">
-<p>内地仅上海、广州、深圳等几个城市有直飞台湾的航班，多数游客还是会选择转机前往，基本思路多是先飞往 吉隆坡/新加坡/香港/雅加达 转机，至于从哪里转，一方面取决于具体的机票价格和航班时间，另一方面也看是否对中转地感兴趣</p>
+<p>两岸直航以包机为主，价格较高，自助游一般香港转机。</p>
 </div>
 <div class="mini_bar"><h3>交通及通讯</h3></div>
 <div class="text">
-<p>台湾上大多数酒店、Guesthouse、餐厅及咖啡馆都有WIFI或网络接口</p>
+<p>火车，包车，租摩托车</p>
 </div>
-<div class="mini_bar"><h3>签证</h3></div>
+<div class="mini_bar"><h3>证照</h3></div>
 <div class="text">
-<p>台湾是落地签，只要现场支付35美金，出示有效护照(到期日前6个月)和往返机票预订单，即可停留30天办签证的时候，签证官可能会明目张胆或者暗示你给小费，所以最好提前准备好零钱（1、5、10美元面额的都行），最多给10美元。我上次先给1美元，对方嫌少，后来又加了5美元，总共给6美元才搞定的</p>
+<p>台湾通行证公安局办理，入台证旅行社办理，最好提前一个月办好</p>
 </div>
 <div class="mini_bar"><h3>饮食</h3></div>
 <div class="text">
-<p>以西餐和泰餐为主，</p>
+<p>小吃天堂，放开肚皮吃吧！，</p>
 </div>
 <div class="mini_bar"><h3><a href="../index.html">返回岛屿列表</a></h3></div>
 </body>
