--- a/hobbies/travels/overseas/islands/newzealand/newzealand.html
+++ b/hobbies/travels/overseas/islands/newzealand/newzealand.html
@@ -21,7 +21,16 @@
 <li>新西兰入境会对带的物品进行仔细开箱检查，因此尽量不要带水果、肉类食品等</li>
 <li>一定要记得去超市买来抵御新西兰的Sandfly小飞虫，提早准备</li>
 </ol>
-<p><strong>贺敏：</strong>  need </p>
+<p><strong>贺敏：</strong>
+1.	为方便自驾，除了导航，建议在机场买一张数据卡。
+2.	自驾是左行，需要习惯一下。道路都不是很宽阔。河流上的桥通常只够一辆车通行，所以是两方车辆交替通行。需要在线后等待。由于道路狭窄，超车的话，留意路上的超车道的标志。通常交通流量大的路上隔一段会有特别留出的超车道，你需要超车就走那条道，否则直行就可以。
+3.	南岛很适合自驾，沿途都会对下一个景点提前标示 （是什么，有多远，在道路的哪一边），景点都有厕所，厕纸。
+4.	深秋的时候去南岛，颜色很美，下雨也没那么多。那会不是旺季，提前一天订旅馆基本都有，推荐。。。。，都是带厨房的公寓式住宅，有全套的厨具和餐具，还有红酒杯。每到一个地方，先逛超市买蔬菜，牛奶，面包，推荐牛羊肉，厨房一般都有烤箱，自己做牛羊排，配上当地的红酒，晚餐会吃得很好。
+5.	步道很受欢迎，但比较花时间，著名的拍魔戒的那条走在山脊上的步道，全程需要3天时间。有一些2小时左右的步道，可以计划一下，穿行在树木参天的森林里，感受很棒！
+6.	没有尝试做直升机看冰川，这得看天气情况。
+7.	皇后镇有很多的极限项目，推荐jet boat。
+8.	皇后镇著名的山顶餐厅，中国人占大多数。餐食不要期望太高，但风景绝对很棒。餐厅再往上有滑翔伞的据点，有人带着你飞到山下。对体重有要求，太轻的话，因为配重的问题不能参加。有一个从山顶冲下来的三轮车项目，很有趣，可以买多次玩的票，平均到一次要便宜不少。
+</p>
 </div>
 
 <div class="cat_bar">北岛</div>
