--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -14,6 +14,13 @@
 <div class="right_wide_text">
 <p><strong>邓海军：</strong>普吉岛非常适合4-10岁小朋友出国旅游，它的海滩景色不是最佳，但交通便利，活动多样，性价比高。<strong>特别提醒：</strong>泰国人找钱时经常少找，在我们5天的行程中发生四次；去外岛浮浅的一日游，很容易晕船。</p>
 <p>推荐5-7天的行程，皮皮岛强烈推荐！</p>
+<strong>贺敏：</strong>
+1.	巴东海滩沿线有许多的大排档，可以先看放在门口的菜单，看看价格和种类，再决定是否进去吃。海鲜通常都是放在一个盛满冰的木质船上，现场挑好称重。烤的大虾有很多种各式口味的调料，超赞的。冰的啤酒瓶会有一个花狸狐哨的海绵套子，拿着不让你觉得冷，很贴心。
+2.	巴东海滩有个很大的超市，里面的水果很新鲜，还有老虎虾，他们可以帮忙烤好，配上沾汁，打包给你，很划算。
+3.	路边有做青木瓜拌菜的小贩，会根据需要选择辣的程度，酸酸辣辣的很好吃。
+4.	马杀鸡很值得一做，一般全身是300Ba，通常就是一个大通铺，用窗幔隔开，一人一个小单间。从头做到脚，手法很舒服放松。
+5.	7，8月份是雨季，通常会突然来一阵大雨，但不会持续太久，天气相对凉爽一些。
+6.	沙滩上通常都有兜售小食品和水果的小贩，除非你想买，否则不要轻易尝他们递过来的东西，省得吃了不买有不愉快。
 </div>
 <div class="left_small_img">
   <img src="phuket_map.jpg" alt="Ballade" width="400" height="400">
