--- a/hobbies/travels/overseas/islands/singapore/singapore.html
+++ b/hobbies/travels/overseas/islands/singapore/singapore.html
@@ -13,6 +13,7 @@
 <div class="pair">
 <div class="right_wide_text">
 <p><strong>邓海军：</strong>新加坡的各动物园和环球影城还是不错的，再看看城市风光，推荐4-5天的行程，值得一去！<strong>特别提醒：</strong>动物园尽量赶早，不然排队得一个小时。</p>
+<p><strong>贺敏：</strong>地铁比较方便，超级不喜欢乘坐公交车。公交车不报站，要在哪站下，还得提前按柱子上的按钮通知司机。站名都超级古怪难记。（开个google map就好）</p>
 </div>
 <div class="left_small_img">
   <img src="singapore_map.jpg" alt="Waiting to load images" width="400" height="400">
