update churchtown picture

--- a/hobbies/travels/overseas/islands/newzealand/newzealand.html
+++ b/hobbies/travels/overseas/islands/newzealand/newzealand.html
@@ -100,7 +100,7 @@ e)如果不玩北岛，并且从基督城进出，建议路线如下(G/库克山
 在基督城，你可以在植物园(Botanic Garden)漫步；乘坐Punts(无蓬方头平底船)泛舟河上；到维多利亚公园山(Victoria Park Hill)登高远眺整座基督城；在无敌海景的新布里顿图书馆(New Brighton Library)度过安静时光；探访地震遗迹，看坍塌的教堂和为纪念逝世者的185张白色椅子。
 </div>
 <div class="right_small_img">
-  <img src="queenstown.jpg" alt="Wait to load image" width="400" height="400">
+  <img src="churchtown.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">基督城</div>
 </div>
 </div>
