tianrui update phuket

--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -21,6 +21,8 @@
 4.	马杀鸡很值得一做，一般全身是300Ba，通常就是一个大通铺，用窗幔隔开，一人一个小单间。从头做到脚，手法很舒服放松。
 5.	7，8月份是雨季，通常会突然来一阵大雨，但不会持续太久，天气相对凉爽一些。
 6.	沙滩上通常都有兜售小食品和水果的小贩，除非你想买，否则不要轻易尝他们递过来的东西，省得吃了不买有不愉快。
+<strong>田锐：</strong>
+迈考海滩在普吉北部，人很少，当时看介绍海边只有7家酒店。只去过万豪，安娜塔拉。据说这个海滩有海龟产卵，季节对的话，能看到海龟。我没看到哈。当地人说环境破坏，海龟越来越少了。娱乐活动基本靠酒店，很少商业设施。一般酒店都有免费独木舟可以使用。帆船收费，但是也不贵 
 </div>
 <div class="left_small_img">
   <img src="phuket_map.jpg" alt="Ballade" width="400" height="400">
