--- a/hobbies/travels/overseas/islands/bali/bali.html
+++ b/hobbies/travels/overseas/islands/bali/bali.html
@@ -12,9 +12,9 @@
 <div class="cat_bar">总体介绍、点评和特别提醒</div>
 <div class="pair">
 <div class="right_wide_text">
-句比较精辟的形容巴厘岛的话是“一流的酒店，二流的海滩，三流的景点”，进一步解释就是：1）巴厘岛的很多景点基本上是可看可不看，是旅行、度假过程中的点缀，所以不要天天赶着看景点；2）巴厘岛的海滩一般；3）巴厘岛的酒店，villa超级无敌的好！所以适合一家子出来度假，适合安排几天就泡在酒店里，哪儿也不去~ 话说很多酒店本身的环境比景点美太多了
 <p><strong>提示：</strong>适合4-10岁小朋友出国旅游，性价比高，推荐5-7天的行程</p>
-
+<strong>汪超：</strong>一句比较精辟的形容巴厘岛的话是“一流的酒店，二流的海滩，三流的景点”，进一步解释就是：1）巴厘岛的很多景点基本上是可看可不看，是旅行、度假过程中的点缀，所以不要天天赶着看景点；2）巴厘岛的海滩一般；3）巴厘岛的酒店，villa超级无敌的好！所以适合一家子出来度假，适合安排几天就泡在酒店里，哪儿也不去~ 话说很多酒店本身的环境比景点美太多了
+<strong>王爱华：</strong>特别推荐乌布，乌布就是那种原始的感觉，让心能静下来的地方，特别原生态的一个小镇，像最初的丽江，也可能像没有寺庙的清迈。小朋友也很喜欢，各种原生态的动物也不少。
 </div>
 <div class="left_small_img">
   <img src="bali_map.jpg" alt="Waiting to load images" width="400" height="400">
