--- a/hobbies/travels/overseas/islands/taiwan/taiwan.html
+++ b/hobbies/travels/overseas/islands/taiwan/taiwan.html
@@ -10,6 +10,16 @@
 <body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
 <div class="head">台湾</div>
 <div class="cat_bar">总体介绍、点评和特别提醒</div>
+<div class="text">
+<p><strong>王爱华：</strong>
+高雄美丽岛，小朋友的乐园；清境农场，体验田园；平溪九份感受千与千寻画面原景；赏花东纵谷，感受日月潭的安宁；垦丁也可以看海，浮潜；总之山川河流湖泊大海，想干嘛都有了，总之台湾能满足不同人的不同需求
+正向环岛，反向环岛都ok，除此之外，感受最最深的是，台湾最美的风景是人：质朴的当地人，真的帮我们当亲人一样，这种感觉在任何地方没体验过。台湾就不要想hotel了，民宿，全部民宿，干净舒适，人特特别nice。
+如果单纯为了去看海，那就不推荐台湾：那边海浪实在是很大，而且沙子非常一般，蓝倒是挺蓝的，顺道去垦丁还可以。</p>
+<p><strong>安志鹏：</strong>日月潭边上的九族文化村 2~3 月份樱花很漂亮  欢乐世界很刺激 门票相比国内还便宜 值得去。
+台北市总统府参观需要提前在官网预约，台北故宫值得多花时间仔细看 尤其要租个讲解耳机给孩子，台北附近的野柳地址公园细细看其实挺美的，很美的石头。
+垦丁龙坑不要门票可以去看看 在栈道走时最近距离感受太平洋的海浪。
+</p>
+</div>
 <div class="pair">
 <div class="right_wide_text">
 最著名的是阿里山，为台湾秀丽俊美风光之象征。首府台北市为台湾政治、经济、金融和文化中心，大厦云集，商业繁荣，是一个人文荟萃、充满活力的国际性都会。高雄市为台湾最大的工业重镇，同时也是台湾第二大都市。在台湾，不仅可探访太鲁阁气势磅礡的险峻高山峡谷；乘坐登山铁道小火车，穿梭林间观看阿里山的日出、云海；抑或攀登东北亚第一高峰——玉山，见证雄伟山岳和四季景致之变幻；来到南台湾享有“亚洲夏威夷”的美誉的垦丁，浓厚的海洋度假气息让人感到轻松自在；日月潭则是一颗耀眼的山中明珠，湖山共融的景色教人叹绝！而花东海岸和纵谷，保留了东台湾最纯净的自然气息；离岛的金门与澎湖，则以丰富的地方特色、人文史迹拼凑出与众不同的风情。
@@ -224,6 +234,17 @@
 <div class="left_small_img">
   <img src="alishan_trainjpg.jpg" alt="Waiting to load images" width="400" height="400">
   <div class="desc">阿里山森林火车</div>
+</div>
+</div>
+<div class="pair">
+<div class="left_wide_text">
+<p>
+清境农场现在已是大名鼎鼎，一般对清境农场的印象就是绵羊、欧式建筑风格的民宿。清境农场能满足你对欧洲牧场的所有想象：青翠山坡上随处可见的小羊，牧羊犬追逐的羊群，还有多条步栈道可供游人散步。栈道视野辽阔，居高临下能够观看清境全貌，沿途还可以远眺中央山脉群峰峥嵘。这几年游客越来越多，清境已经形成了一个商圈，就连7-11、星巴克都有，越来越多旅游业者在这里买地建造民宿。现在一登清境，随处可见满溢着浓厚欧风味的民宿建筑，所以现在每当提到清境农场，很多人喜欢称之为很有欧州风情的“小瑞士”。
+</p>
+</div>
+<div class="right_small_img">
+  <img src="alishan_qingjing.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">清境农场</div>
 </div>
 </div>
 <div class="cat_bar"><h2>交通、签证、餐饮及其它</h2></div>
