--- a/hobbies/travels/overseas/islands/taiwan/taiwan.html
+++ b/hobbies/travels/overseas/islands/taiwan/taiwan.html
@@ -156,6 +156,18 @@
   <div class="desc">七星潭</div>
 </div>
 </div>
+<div class="pair">
+<div class="right_wide_text">
+<p>
+花东纵谷风景区位于台湾东部，南北绵延约180公里，是一片夹在岛上中央山脉和海岸山脉之间下场的冲积平原，间杂不少台地，台9公路和东部铁路干线贯穿其间，可以说是贯通花莲和台东的“绿色走廊”。
+这里生态良好，还未被全面开发，因此民风淳朴，环境无污染。景区内青山环绕苍翠，自然景观丰富，不仅有瀑布、峡谷、溪流等常见自然风光，还可以享用温泉，参观田园、牧场，探访史前文化、游览原住民文化、台东产业遗址等人文历史景观。
+</p>
+</div>
+<div class="left_small_img">
+  <img src="hualian_huadongzonggu.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">花东纵谷</div>
+</div>
+</div>
 <div class="cat_bar">垦丁</div>
 <div class="pair">
 <div class="right_wide_text">
