--- a/hobbies/travels/overseas/islands/newzealand.html
+++ b/hobbies/travels/overseas/islands/newzealand.html
@@ -7,8 +7,8 @@
 <!--<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
 </head>
 <body>
-<h1 align="center">澳大利亚 大堡礁</h1>
-<p align="center">代刚会单独share</p>
+<h1 align="center">新西兰</h1>
+<p align="center">贺敏会单独share</p>
 
 <p align="center"><a href="index.html">Back to home</a></p>
 </body>
