add e-mail to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h3>Haijun Deng</h3>
-            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a></p>
+            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a></p>
         <h3>Objective</h3>
             <p>A challenging position as a Software Engineer and the possibility of career advancement.</p>
             <p></p>
