--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h3>Haijun Deng</h3>
-            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a></p>
+            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a>, Chinese Edition please click <a href="http://hbdhj.github.io/resume/简历.html">here</a></p>
         <h3>Objective</h3>
             <p>A challenging position as a Software Engineer and the possibility of career advancement.</p>
             <p></p>
@@ -18,9 +18,9 @@
             <p>C, C++, Linux, UNIX, Solaris, Network, Large-Scale, IPC, OOP, OOD, Scrum, Agile, TDD, </p>
             <p>    Python, Shell, git, ClearCase, Test Automation, gdb, Makefile, spring framework</p>
             <p></p>
-            <h3>Experience</h3>
+        <h3>Experience</h3>
             <h4>2011 - Present VIAVI/JDSU Senior Software Engineer</h4>
-      <ul>
+            <ul>
                 <li>Design and implement new component as proxy of 3rd product and new Component as agent between legacy products and new products. </li>
                 <li>Design and implement LDAP support and Sensitive Data Mask in existing products. </li>
                 <li>Implement and trouble-shooting in new component to support XUDT.</li>
@@ -29,7 +29,7 @@
             </ul>
             <p></p>
             <h4>2005 - 2011 Nokia SIEMENS Networks/SIEMENS Software Engineer</h4>
-      <ul>
+            <ul>
                 <li>FMC Manual Test and Test Automation based on Robot Framework, HP QTP and Selenium. </li>
                 <li>Design and implement new GUI and Database Proxy for ACI 6.0. </li>
                 <li>Development and trouble-shooting in Sun Cluster Configuration for PCS 2.0. </li>
@@ -37,22 +37,22 @@
                 <li>Develop Go interface in PCS 1.0.</li>
             </ul>
             <h4>2004 - 2005 China Academy of Telecommunication Research Engineer</h4>
-      <ul>
+            <ul>
                 <li>Telecommunication network planning and optimization.</li>
                 <li>Network plan and simulation software development.</li>
             </ul>
             <p></p>
-            <h3>Education</h3>
+        <h3>Education</h3>
             <h4>Beijing University of Posts and Telecommunications</h4>
             <p>MS, Optical Communication, 2004</p>
             <p>BS, Telecommunication Engineering, 2001</p>
-            <h3>Reference</h3>
+        <h3>Reference</h3>
             <p>SPOJ archievement: highest rank 500+, current rank 800+ <a href="http://www.spoj.com/users/denghj1979/">Details</a></p>
             <p>Codewars archievement: 3 kyu - Competent, current rank 1600+ <a href="http://www.codewars.com/users/hbdhj">Details</a></p>
             <p>Repositories on Github  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
             <p>Profile on stackoverflow  <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></p>
             <p>Personal Blog on CSDN  <a href="http://blog.csdn.net/hbdhj">Details</a></p>
-            <h3>Activities</h3>
+        <h3>Activities</h3>
             <h4>Active Toastmaster Memeber</h4>
             <p>Current VPE, ex-VPPR of D85 C3 JET</p>
             <p>2nd Place of Div C Mandarin humour speech contest 2015</p>
