add 'back to home' link

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>网站名字</title>
+<title>hbdhj's personal websites</title>
 <!-- Add some style to your site, see http://getbootstrap.com for details -->
 <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
 </head>
 <body>
 <h1>hbdhj's personal websites</h1>
-<p>Welcome to my personal websites</p>
+<p>Welcome to Deng Haijun's personal websites</p>
+<p></p>
 <h2>hobbies</h2>
 <p><a href="/hobbies/travels/overseas/islands/index.html">Overseas Islands</a> </p>
+<p></p>
+<h2>Career</h2>
+<p><a href="/resume/index.html">Resume - English Edition</a> </p>
+<p><a href="/resume/简历.html">简历 - 中文版本</a> </p>
 </body>
 </html>
