--- a/resume/简历.html
+++ b/resume/简历.html
@@ -59,5 +59,6 @@
             <p>2015年 C中区 中文幽默演讲比赛第二名</p>
             <p>2016年 C中区3小区 中文演讲比赛第一名</p>
             <p>2016年 C中区3小区 英文演讲比赛第一名</p>
+        <a href="/index.html">回到首页</a>
     </body>
 </html>
