--- a/resume/index.html
+++ b/resume/index.html
@@ -58,5 +58,6 @@
             <p>2nd Place of Div C Mandarin humour speech contest 2015</p>
             <p>1st Place of Div C Area3 Mandarin speech contest 2016</p>
             <p>1st Place of Div C Area3 International speech contest 2015</p>
+        <a href="/index.html">back to homepage</a>
     </body>
 </html>
