--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -13,6 +13,7 @@
 <body onload="GetIslandsList();GetMap();">
 <h1 align="center">海岛游攻略</h1>
 <p align="center">version 0.0.5</p>
+<a align="center" href="/index.html">回到首页</a>
 <table border="1" align="center" id="islands_list">
 </table>
 <p align="center"></p>
