--- a/hobbies/travels/overseas/islands/seychelles.html
+++ b/hobbies/travels/overseas/islands/seychelles.html
@@ -7,9 +7,9 @@
 <!--<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
 </head>
 <body>
-<h1 align="center">Seychelles</h1>
-<p align="center">Welcome to my personal websites</p>
+<h1 align="center">塞舌尔</h1>
+<p align="center">信息建设中</p>
 
-<p align="center"><a href="index.html">Back to home</a></p>
+<p align="center"><a href="index.html">回到攻略首页</a></p>
 </body>
 </html>
