--- a/hobbies/travels/overseas/islands/GreatBarrierReef.html
+++ b/hobbies/travels/overseas/islands/GreatBarrierReef.html
@@ -7,9 +7,9 @@
 <!--<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
 </head>
 <body>
-<h1 align="center">澳大利亚 大堡礁</h1>
-<p align="center">代刚会单独share</p>
+<h1 align="center">大堡礁 澳大利亚 </h1>
+<p align="center">信息建设中</p>
 
-<p align="center"><a href="index.html">Back to home</a></p>
+<p align="center"><a href="index.html">回到攻略首页</a></p>
 </body>
 </html>
