--- a/hobbies/travels/overseas/islands/newzealand.html
+++ b/hobbies/travels/overseas/islands/newzealand.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <h1 align="center">新西兰</h1>
-<p align="center">贺敏会单独share</p>
+<p align="center">信息建设中</p>
 
-<p align="center"><a href="index.html">Back to home</a></p>
+<p align="center"><a href="index.html">回到攻略首页</a></p>
 </body>
 </html>
