make related folder

--- a/resume/简历.html
+++ b/resume/简历.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h3>邓海军</h3>
-            <p>请在领英上联系 <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">我</a> 或发送电子邮件给 <a href="mailto:hbdhj@sina.com">我</a>，英语版本请见<a href="http://hbdhj.github.io/resume/index.html">这里</a></p>
+            <p>请在领英上联系 <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">我</a> 或发送电子邮件给 <a href="mailto:hbdhj@sina.com">我</a>，英语版本请见<a href="/resume/index.html">这里</a></p>
         <h3>求职目标</h3>
             <p>高级软件工程师</p>
             <p></p>
