--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Welcome to Deng Haijun's personal websites，欢迎来到邓海军的个人网页</p>
 <p></p>
 <h2>hobbies/爱好</h2>
-<p><a href="/hobbies/travels/overseas/islands/index.html">Overseas Islands/国外海岛游gonglue</a> </p>
+<p><a href="/hobbies/travels/overseas/islands/index.html">Overseas Islands/国外海岛游攻略</a> </p>
 <p></p>
 <h2>Career</h2>
 <p><a href="/resume/index.html">Resume - English Edition</a> </p>
