add github code lines

--- a/resume/index.html
+++ b/resume/index.html
@@ -47,11 +47,11 @@
             <p>MS, Optical Communication, 2004</p>
             <p>BS, Telecommunication Engineering, 2001</p>
         <h3>Reference</h3>
-            <p>SPOJ archievement: highest rank 500+, current rank 800+ <a href="http://www.spoj.com/users/denghj1979/">Details</a></p>
-            <p>Codewars archievement: 3 kyu - Competent, current rank 1600+ <a href="http://www.codewars.com/users/hbdhj">Details</a></p>
-            <p>Repositories on Github  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
-            <p>Profile on stackoverflow  <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></p>
-            <p>Personal Blog on CSDN  <a href="http://blog.csdn.net/hbdhj">Details</a></p>
+            <p>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></p>
+            <p>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></p>
+            <p>Repositories on Github, over 44,000 lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
+            <p>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></p>
+            <p>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></p>
         <h3>Activities</h3>
             <h4>Active Toastmaster Memeber</h4>
             <p>Current VPE, ex-VPPR of D85 C3 JET</p>
