--- a/resume/简历.html
+++ b/resume/简历.html
@@ -50,7 +50,7 @@
         <h3>参考信息</h3>
             <p>SPOJ （C语言及算法） 最高排名 500+，现排名800+（总人数约5万人），可参见  <a href="http://www.spoj.com/users/denghj1979/">链接</a></p>
             <p>Codewars （python语言及算法）3 阶 – 胜任、能干，现排名 1600+，可参见 <a href="http://www.codewars.com/users/hbdhj">链接</a></p>
-            <p>Github上的个人代码库，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></p>
+            <p>Github上的个人代码库，超过44，000行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></p>
             <p>stackoverflow 上的个人页面，可参见 <a href="https://stackoverflow.com/users/3001445/deng-haijun">链接</a></p>
             <p>CSDN上的个人博客   <a href="http://blog.csdn.net/hbdhj">链接</a></p>
         <h3>其他活动</h3>
