--- a/resume/github-code.html
+++ b/resume/github-code.html
@@ -7,30 +7,36 @@
         <title>Haijun Deng's code on github</title>
     </head>
     <body>
-        <h3>Haijun Deng coding on github</h3>
-        <canvas id="codeType" width="100" height="100"></canvas>
+        <h3 align="center">Haijun Deng coding on github</h3>
+        <canvas id="codeType"></canvas>
 <script>
 var ctx = document.getElementById("codeType");
 var codeType = new Chart(ctx, {
     type: 'pie',
     data: {
         labels: [
-            "C/C++",
-            "python",
-            "JavaScript"
+            "C/C++ 29200",
+            "python 4072",
+            "HTML 3226",
+            "JavaScript 1231",
+            "swift 1068",
         ],
         datasets: [
             {
-                data: [300, 50, 100],
+                data: [29200, 4072, 3226, 1231, 1068],
                 backgroundColor: [
                     "#FF6384",
                     "#36A2EB",
-                    "#FFCE56"
+                    "#FFCE56",
+                    "#00FFFF",
+                    "#00FF00",
                 ],
                 hoverBackgroundColor: [
                     "#FF6384",
                     "#36A2EB",
-                    "#FFCE56"
+                    "#FFCE56",
+                    "#00FFFF",
+                    "#00FF00",
                 ]
             }]
     },
@@ -45,6 +51,5 @@ var codeType = new Chart(ctx, {
     }
 });
 </script>
-
     </body>
 </html>
