seperate java script from html

--- a/resume/github代码行数.html
+++ b/resume/github代码行数.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='utf-8' />
+        <meta http-equiv="Content-Type" content="text/html"/>
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.bundle.js"></script>
         <script type="text/javascript" src="codelines.js"></script>
-        <title>Haijun Deng's code on github</title>
+        <title>github上邓海军的代码行数</title>
     </head>
     <body onload="load()">
-        <h3 align="center">lines of Haijun Deng's code on github by language</h3>
-        <h5 align="center"><a href="resume.html">Back to resume</a></h5>
+        <h3 align="center">按主要语言分github上邓海军的代码行数</h3>
+        <h5 align="center"><a href="简历.html">回到简历</a></h5>
         <canvas id="codelines"></canvas>
     </body>
 </html>
