--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='utf-8' />
+        <meta http-equiv="Content-Type" content="text/html"/>
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <title>Haijun Deng's resume</title>
     </head>
     <body>
         <h3>Haijun Deng</h3>
-            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a>, Chinese Edition please click <a href="/resume/简历.html">here</a></p>
+            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a>, Chinese Edition please click <a href="简历.html">here</a></p>
         <h3>Objective</h3>
             <p>A challenging position as a Software Engineer and the possibility of career advancement.</p>
             <p></p>
@@ -49,7 +51,7 @@
         <h3>Reference</h3>
             <p>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></p>
             <p>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></p>
-            <p>Repositories on Github, over 44,000 lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
+            <p>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
             <p>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></p>
             <p>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></p>
         <h3>Activities</h3>
