--- a/resume/简历.html
+++ b/resume/简历.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h3>邓海军</h3>
-            <p>请在领英上联系 <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">我</a> 或发送电子邮件给 <a href="mailto:hbdhj@sina.com">我</a>，英语版本请见<a href="/resume/index.html">这里</a></p>
+            <p>请在领英上联系 <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">我</a> 或发送电子邮件给 <a href="mailto:hbdhj@sina.com">我</a>，英语版本请见<a href="resume.html">这里</a></p>
         <h3>求职目标</h3>
             <p>高级软件工程师</p>
             <p></p>
@@ -50,7 +50,7 @@
         <h3>参考信息</h3>
             <p>SPOJ （C语言及算法） 最高排名 500+，现排名800+（总人数约5万人），可参见  <a href="http://www.spoj.com/users/denghj1979/">链接</a></p>
             <p>Codewars （python语言及算法）3 阶 – 胜任、能干，现排名 1600+，可参见 <a href="http://www.codewars.com/users/hbdhj">链接</a></p>
-            <p>Github上的个人代码库，超过44，000行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></p>
+            <p>Github上的个人代码库，超过<a href="github代码行数.html">44,000</a>行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></p>
             <p>stackoverflow 上的个人页面，可参见 <a href="https://stackoverflow.com/users/3001445/deng-haijun">链接</a></p>
             <p>CSDN上的个人博客   <a href="http://blog.csdn.net/hbdhj">链接</a></p>
         <h3>其他活动</h3>
