fix a minor bug in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p><a href="/hobbies/travels/overseas/islands/index.html">Overseas Islands/国外海岛游攻略</a> </p>
 <p></p>
 <h2>Career</h2>
-<p><a href="/resume/index.html">Resume - English Edition</a> </p>
+<p><a href="/resume/resume.html">Resume - English Edition</a> </p>
 <p><a href="/resume/简历.html">简历 - 中文版本</a> </p>
 </body>
 </html>
