--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,63 +3,165 @@
     <head>
         <meta charset='utf-8' />
         <meta http-equiv="Content-Type" content="text/html"/>
-        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <!--<link type="text/css" rel="stylesheet" href="stylesheet.css"/>-->
+        <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
+    	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <title>Haijun Deng's resume</title>
     </head>
     <body>
-        <h3>Haijun Deng</h3>
-            <p>Please contact me at <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">Linkedin</a> or email <a href="mailto:hbdhj@sina.com">me</a>, Chinese Edition please click <a href="简历.html">here</a></p>
-        <h3>Objective</h3>
-            <p>A challenging position as a Software Engineer and the possibility of career advancement.</p>
-            <p></p>
-        <h3>Profile</h3>
-            <p>8+ years C/C++ programing on Unix-like system. 5+ years development on large-scale distributed system(>100 nodes). Fluent English and strong self-study skills.</p>
-            <p></p>
-            <h3>Keywords</h3>
-            <p>C, C++, Linux, UNIX, Solaris, Network, Large-Scale, IPC, OOP, OOD, Scrum, Agile, TDD, </p>
-            <p>    Python, Shell, git, ClearCase, Test Automation, gdb, Makefile, spring framework</p>
-            <p></p>
-        <h3>Experience</h3>
-            <h4>2011 - Present VIAVI/JDSU Senior Software Engineer</h4>
-            <ul>
-                <li>Design and implement new component as proxy of 3rd product and new Component as agent between legacy products and new products. </li>
-                <li>Design and implement LDAP support and Sensitive Data Mask in existing products. </li>
-                <li>Implement and trouble-shooting in new component to support XUDT.</li>
-                <li>Porting Code from HP UX to SuSE. </li>
-                <li>Coach and drive interns.</li>
-            </ul>
-            <p></p>
-            <h4>2005 - 2011 Nokia SIEMENS Networks/SIEMENS Software Engineer</h4>
-            <ul>
-                <li>FMC Manual Test and Test Automation based on Robot Framework, HP QTP and Selenium. </li>
-                <li>Design and implement new GUI and Database Proxy for ACI 6.0. </li>
-                <li>Development and trouble-shooting in Sun Cluster Configuration for PCS 2.0. </li>
-                <li>Implement Installation and Configuration scripts for PCS 1.1. </li>
-                <li>Develop Go interface in PCS 1.0.</li>
-            </ul>
-            <h4>2004 - 2005 China Academy of Telecommunication Research Engineer</h4>
-            <ul>
-                <li>Telecommunication network planning and optimization.</li>
-                <li>Network plan and simulation software development.</li>
-            </ul>
-            <p></p>
-        <h3>Education</h3>
-            <h4>Beijing University of Posts and Telecommunications</h4>
-            <p>MS, Optical Communication, 2004</p>
-            <p>BS, Telecommunication Engineering, 2001</p>
-        <h3>Reference</h3>
-            <p>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></p>
-            <p>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></p>
-            <p>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></p>
-            <p>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></p>
-            <p>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></p>
-        <h3>Activities</h3>
-            <h4>Active Toastmaster Memeber</h4>
-            <p>Current VPE, ex-VPPR of D85 C3 JET</p>
-            <p>2nd Place of Div C Mandarin humour speech contest 2015</p>
-            <p>1st Place of Div C Area3 Mandarin speech contest 2016</p>
-            <p>1st Place of Div C Area3 International speech contest 2015</p>
-        <a href="/index.html">back to homepage</a>
+        <div id="doc2" class="yui-t7">
+        	<div id="inner">
+        		<div id="hd">
+        			<div class="yui-gc">
+        				<div class="yui-u first">
+        					<h1>Haijun Deng</h1>
+        					<h2>C/C++ Programmer</h2>
+        				</div>
+
+        				<div class="yui-u">
+        					<div class="contact-info">
+        						<h3><a id="pdf" href="简历.html">Chinese Edition</a></h3>
+        						<h3><a href="mailto:hbdhj@sina.com">hbdhj@sina.com</a></h3>
+        					</div><!--// .contact-info -->
+        				</div>
+        			</div><!--// .yui-gc -->
+        		</div><!--// hd -->
+
+        		<div id="bd">
+        			<div id="yui-main">
+        				<div class="yui-b">
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>Profile</h2>
+        						</div>
+        						<div class="yui-u">
+        							<p class="enlarge">
+        								8+ years C/C++ programing on Unix-like system. 5+ years development on large-scale distributed system(>100 nodes). Fluent English and strong self-study skills.
+        							</p>
+        						</div>
+        					</div><!--// .yui-gf -->
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>Technical</h2>
+        						</div>
+        						<div class="yui-u">
+        							<ul class="talent">
+        								<li>C/C++</li>
+        								<li>Large-Scale</li>
+                                        <li>Agile/TDD</li>
+        								<li class="last">ClearCase</li>
+        							</ul>
+
+        							<ul class="talent">
+        								<li>Linux</li>
+        								<li>IPC</li>
+                                        <li>Python</li>
+        								<li class="last">Test Automation</li>
+        							</ul>
+
+        							<ul class="talent">
+        								<li>HP-UX</li>
+        								<li>OOP</li>
+                                        <li>Shell</li>
+        								<li class="last">Makefile</li>
+        							</ul>
+
+                                    <ul class="talent">
+        								<li>Solaris</li>
+        								<li>Scrum</li>
+                                        <li>git</li>
+        								<li class="last">spring framework</li>
+        							</ul>
+
+                                    <ul class="talent">
+        								<li>Network</li>
+        								<li>MySQL</li>
+                                        <li>gdb</li>
+        								<li class="last">Java</li>
+        							</ul>
+        						</div>
+        					</div><!--// .yui-gf-->
+
+        					<div class="yui-gf">
+
+        						<div class="yui-u first">
+        							<h2>Experience</h2>
+        						</div><!--// .yui-u -->
+
+        						<div class="yui-u">
+        							<div class="job">
+        								<h2>VIAVI/JDSU</h2>
+        								<h3>Senior Software Engineer</h3>
+        								<h4>2011-NOW</h4>
+        								<p>Design and implement new component as proxy of 3rd product and new Component as agent between legacy products and new products. Design and implement LDAP support and Sensitive Data Mask in existing products. Implement and trouble-shooting in new component to support XUDT. Porting Code from HP UX to SuSE. Coach and drive interns.</p>
+        							</div>
+
+        							<div class="job">
+        								<h2>Nokia SIEMENS Networks/SIEMENS </h2>
+        								<h3>Software Engineer</h3>
+        								<h4>2005-2011</h4>
+        								<p>FMC Manual Test and Test Automation based on Robot Framework, HP QTP and Selenium. Design and implement new GUI and Database Proxy for ACI 6.0. Development and trouble-shooting in Sun Cluster Configuration for PCS 2.0. Implement Installation and Configuration scripts for PCS 1.1. Develop Go interface in PCS 1.0.</p>
+        							</div>
+
+        							<div class="job last">
+        								<h2>China Academy of Telecommunication Research</h2>
+        								<h3>Engineer</h3>
+        								<h4>2004-2005</h4>
+        								<p>Telecommunication network planning and optimization. Network plan and simulation software development.</p>
+        							</div>
+        						</div><!--// .yui-u -->
+        					</div><!--// .yui-gf -->
+
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>Education</h2>
+        						</div>
+        						<div class="yui-u">
+                                    <h2>Beijing University of Posts and Telecommunications</h2>
+        							<h3>MS, Optical Communication, 2004</h3>
+                                    <h3>BS, Telecommunication Engineering, 2001</h3>
+        						</div>
+        					</div><!--// .yui-gf -->
+
+                            <div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>Reference</h2>
+        						</div>
+        						<div class="yui-u">
+                                    <h3>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></h3>
+                                    <h3>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></h3>
+                                    <h3>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h3>
+                                    <h3>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></h3>
+                                    <h3>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h3>
+        						</div>
+        					</div><!--// .yui-gf -->
+                            <div class="yui-gf last">
+        						<div class="yui-u first">
+        							<h2>Activities</h2>
+        						</div>
+        						<div class="yui-u">
+        							<h2>Active Toastmaster Memeber</h2>
+        							<h3>Current VPE, ex-VPPR of D85 C3 JET</h3>
+                                    <h3>2nd Place of Div C Mandarin humour speech contest 2015</h3>
+                                    <h3>1st Place of Div C Area3 Mandarin speech contest 2016</h3>
+                                    <h3>1st Place of Div C Area3 International speech contest 2015</h3>
+        						</div>
+        					</div><!--// .yui-gf -->
+        				</div><!--// .yui-b -->
+        			</div><!--// yui-main -->
+        		</div><!--// bd -->
+
+        		<div id="ft">
+        			<p>Haijun Deng &mdash; <a href="mailto:hbdhj@sina.com">hbdhj@sina.com</a></p>
+        		</div><!--// footer -->
+
+        	</div><!-- // inner -->
+
+
+        </div><!--// doc -->
     </body>
 </html>
