--- a/resume/resume.html
+++ b/resume/resume.html
@@ -16,7 +16,7 @@
         			<div class="yui-gc">
         				<div class="yui-u first">
         					<h1>Haijun Deng</h1>
-        					<h2>C/C++ Programmer</h2>
+        					<h2>Senior Software Engineer</h2>
         				</div>
 
         				<div class="yui-u">
@@ -132,11 +132,11 @@
         							<h2>Reference</h2>
         						</div>
         						<div class="yui-u">
-                                    <h3>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></h3>
-                                    <h3>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></h3>
-                                    <h3>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h3>
-                                    <h3>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></h3>
-                                    <h3>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h3>
+                                    <h4>SPOJ archievement: highest rank 500+, current rank 800+, refer to <a href="http://www.spoj.com/users/denghj1979/">Details</a></h4>
+                                    <h4>Codewars archievement: 3 kyu - Competent, current rank 1600+, refer to <a href="http://www.codewars.com/users/hbdhj">Details</a></h4>
+                                    <h4>Repositories on Github, over <a href="github-code.html">44,000</a> lines of code, refer to  <a href="https://github.com/hbdhj?tab=repositories">Details</a></h4>
+                                    <h4>Profile on stackoverflow, refer to <a href="https://stackoverflow.com/users/3001445/deng-haijun">Details</a></h4>
+                                    <h4>Personal Blog on CSDN, refer to  <a href="http://blog.csdn.net/hbdhj">Details</a></h4>
         						</div>
         					</div><!--// .yui-gf -->
                             <div class="yui-gf last">
@@ -144,11 +144,11 @@
         							<h2>Activities</h2>
         						</div>
         						<div class="yui-u">
-        							<h2>Active Toastmaster Memeber</h2>
-        							<h3>Current VPE, ex-VPPR of D85 C3 JET</h3>
-                                    <h3>2nd Place of Div C Mandarin humour speech contest 2015</h3>
-                                    <h3>1st Place of Div C Area3 Mandarin speech contest 2016</h3>
-                                    <h3>1st Place of Div C Area3 International speech contest 2015</h3>
+        							<h3>Active Toastmaster Memeber</h3>
+        							<h4>Current VPE, ex-VPPR of D85 C3 JET</h4>
+                                    <h4>2nd Place of Div C Mandarin humour speech contest 2015</h4>
+                                    <h4>1st Place of Div C Area3 Mandarin speech contest 2016</h4>
+                                    <h4>1st Place of Div C Area3 International speech contest 2015</h4>
         						</div>
         					</div><!--// .yui-gf -->
         				</div><!--// .yui-b -->
