--- a/resume/简历.html
+++ b/resume/简历.html
@@ -3,62 +3,165 @@
     <head>
         <meta charset='utf-8' />
         <meta http-equiv="Content-Type" content="text/html"/>
-        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <!--<link type="text/css" rel="stylesheet" href="stylesheet.css"/>-->
+        <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
+    	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
         <title>Haijun Deng's resume</title>
     </head>
     <body>
-        <h3>邓海军</h3>
-            <p>请在领英上联系 <a href="https://www.linkedin.com/in/haijun-deng-3712a925?trk=nav_responsive_tab_profile_pic">我</a> 或发送电子邮件给 <a href="mailto:hbdhj@sina.com">我</a>，英语版本请见<a href="resume.html">这里</a></p>
-        <h3>求职目标</h3>
-            <p>高级软件工程师</p>
-            <p></p>
-        <h3>个人简介</h3>
-            <p>八年Linux/HP-Unix/Solaris C/C++商业软件开发经验，五年大型分布式系统开发经验(>100 节点)，三年Python开发经验，熟悉数据结构及算法，学习能力强</p>
-            <p></p>
-        <h3>技能及语言</h3>
-            <p>C, C++, Linux, UNIX, Solaris, Network, Large-Scale, IPC, OOP, OOD, Scrum, Agile, TDD, </p>
-            <p>    Python, Shell, git, ClearCase, Test Automation, gdb, Makefile, spring framework</p>
-            <p></p>
-        <h3>职业经历</h3>
-            <h4>2011.3 - Present 维亚威/捷迪讯 高级软件工程师</h4>
-                <ul>
-                    <li>新产品与老产品之间的接口模块的设计与开发</li>
-                    <li>LDAP与敏感信息处理模块的设计与开发，</li>
-                    <li>新协议模块的开发与调试</li>
-                    <li>从HP-Unix到Linux的代码移植</li>
-                    <li>外包人员的培训及管理</li>
-                </ul>
-            <p></p>
-            <h4>2005.7 - 2011.2 诺基亚西门子网络/西门子通讯 软件工程师</h4>
-                <ul>
-                    <li>使用Robot Framework, HP QTP 及 Selenium，开发分布式核心网自动化测试框架</li>
-                    <li>开发接入网网管系统的界面和数据库代理系统</li>
-                    <li>开发核心网产品的自动化安装配置脚本</li>
-                    <li>开发相关的协议找</li>
-                </ul>
-            <h4>2004.5 - 2005.6 信息产业部电信研究院 工程师</h4>
-                <ul>
-                <li>电信网络的规划及优化</li>
-                <li>网络规划软件的开发</li>
-            </ul>
-            <p></p>
-        <h3>教育经历</h3>
-            <h4>北京邮电大学</h4>
-            <p>2004年4月 光通信专业硕士毕业</p>
-            <p>2001年6月 通信通信工程专业学士毕业</p>
-        <h3>参考信息</h3>
-            <p>SPOJ （C语言及算法） 最高排名 500+，现排名800+（总人数约5万人），可参见  <a href="http://www.spoj.com/users/denghj1979/">链接</a></p>
-            <p>Codewars （python语言及算法）3 阶 – 胜任、能干，现排名 1600+，可参见 <a href="http://www.codewars.com/users/hbdhj">链接</a></p>
-            <p>Github上的个人代码库，超过<a href="github代码行数.html">44,000</a>行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></p>
-            <p>stackoverflow 上的个人页面，可参见 <a href="https://stackoverflow.com/users/3001445/deng-haijun">链接</a></p>
-            <p>CSDN上的个人博客   <a href="http://blog.csdn.net/hbdhj">链接</a></p>
-        <h3>其他活动</h3>
-            <h4>土马俱乐部成员</h4>
-            <p>现任D85 C3 JET VPE，前任VPPR</p>
-            <p>2015年 C中区 中文幽默演讲比赛第二名</p>
-            <p>2016年 C中区3小区 中文演讲比赛第一名</p>
-            <p>2016年 C中区3小区 英文演讲比赛第一名</p>
-        <a href="/index.html">回到首页</a>
+        <div id="doc2" class="yui-t7">
+        	<div id="inner">
+        		<div id="hd">
+        			<div class="yui-gc">
+        				<div class="yui-u first">
+        					<h1>邓海军</h1>
+        					<h2>高级软件工程师</h2>
+        				</div>
+
+        				<div class="yui-u">
+        					<div class="contact-info">
+        						<h3><a id="pdf" href="resume.html">英语版</a></h3>
+        						<h3><a href="mailto:hbdhj@sina.com">hbdhj@sina.com</a></h3>
+        					</div><!--// .contact-info -->
+        				</div>
+        			</div><!--// .yui-gc -->
+        		</div><!--// hd -->
+
+        		<div id="bd">
+        			<div id="yui-main">
+        				<div class="yui-b">
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>个人简介</h2>
+        						</div>
+        						<div class="yui-u">
+        							<p class="enlarge">
+        								八年Linux/HP-Unix/Solaris C/C++商业软件开发经验，五年大型分布式系统开发经验(>100 节点)，三年Python开发经验，熟悉数据结构及算法，学习能力强
+        							</p>
+        						</div>
+        					</div><!--// .yui-gf -->
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>技能及语言</h2>
+        						</div>
+        						<div class="yui-u">
+        							<ul class="talent">
+        								<li>C/C++</li>
+        								<li>Large-Scale</li>
+                                        <li>Agile/TDD</li>
+        								<li class="last">ClearCase</li>
+        							</ul>
+
+        							<ul class="talent">
+        								<li>Linux</li>
+        								<li>IPC</li>
+                                        <li>Python</li>
+        								<li class="last">Test Automation</li>
+        							</ul>
+
+        							<ul class="talent">
+        								<li>HP-UX</li>
+        								<li>OOP</li>
+                                        <li>Shell</li>
+        								<li class="last">Makefile</li>
+        							</ul>
+
+                                    <ul class="talent">
+        								<li>Solaris</li>
+        								<li>Scrum</li>
+                                        <li>git</li>
+        								<li class="last">spring framework</li>
+        							</ul>
+
+                                    <ul class="talent">
+        								<li>Network</li>
+        								<li>MySQL</li>
+                                        <li>gdb</li>
+        								<li class="last">Java</li>
+        							</ul>
+        						</div>
+        					</div><!--// .yui-gf-->
+
+        					<div class="yui-gf">
+
+        						<div class="yui-u first">
+        							<h2>职业经历</h2>
+        						</div><!--// .yui-u -->
+
+        						<div class="yui-u">
+        							<div class="job">
+        								<h2>维亚威/捷迪讯 </h2>
+        								<h3>高级软件工程师</h3>
+        								<h4>2011-现在</h4>
+        								<p>新产品与老产品之间的接口模块的设计与开发， LDAP与敏感信息处理模块的设计与开发，新协议模块的开发与调试，从HP-Unix到Linux的代码移植，外包人员的培训及管理</p>
+        							</div>
+
+        							<div class="job">
+        								<h2>诺基亚西门子网络/西门子通讯</h2>
+        								<h3>软件工程师</h3>
+        								<h4>2005-2011</h4>
+        								<p>使用Robot Framework, HP QTP 及 Selenium，开发分布式核心网自动化测试框架，开发接入网网管系统的界面和数据库代理系统，开发核心网产品的自动化安装配置脚本，开发相关的协议栈</p>
+        							</div>
+
+        							<div class="job last">
+        								<h2>信息产业部电信研究院</h2>
+        								<h3>工程师</h3>
+        								<h4>2004-2005</h4>
+        								<p>电信网络的规划及优化，网络规划算法研究，网络规划软件的开发</p>
+        							</div>
+        						</div><!--// .yui-u -->
+        					</div><!--// .yui-gf -->
+
+
+        					<div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>教育经历</h2>
+        						</div>
+        						<div class="yui-u">
+                                    <h2>北京邮电大学</h2>
+        							<h3>2004年4月 光通信专业硕士毕业</h3>
+                                    <h3>2001年6月 通信通信工程专业学士毕业</h3>
+        						</div>
+        					</div><!--// .yui-gf -->
+
+                            <div class="yui-gf">
+        						<div class="yui-u first">
+        							<h2>参考信息</h2>
+        						</div>
+        						<div class="yui-u">
+                                    <h4>SPOJ （C语言及算法） 最高排名 500+，现排名800+（总人数约5万人），可参见  <a href="http://www.spoj.com/users/denghj1979/">链接</a></h4>
+                                    <h4>Codewars （python语言及算法）3 阶 – 胜任、能干，现排名 1600+，可参见 <a href="http://www.codewars.com/users/hbdhj">链接</a></h4>
+                                    <h4>Github上的个人代码库，超过<a href="github代码行数.html">44,000</a>行代码，可参见<a href="https://github.com/hbdhj?tab=repositories">链接</a></h4>
+                                    <h4>stackoverflow 上的个人页面，可参见 <a href="https://stackoverflow.com/users/3001445/deng-haijun">链接</a></h4>
+                                    <h4>CSDN上的个人博客   <a href="http://blog.csdn.net/hbdhj">链接</a></h4>
+        						</div>
+        					</div><!--// .yui-gf -->
+                            <div class="yui-gf last">
+        						<div class="yui-u first">
+        							<h2>其他活动</h2>
+        						</div>
+        						<div class="yui-u">
+        							<h3>土马俱乐部成员</h3>
+        							<h4>现任D85 C3 JET VPE，前任VPPR</h4>
+                                    <h4>2015年 C中区 中文幽默演讲比赛第二名</h4>
+                                    <h4>2016年 C中区3小区 中文演讲比赛第一名</h4>
+                                    <h4>2016年 C中区3小区 英文演讲比赛第一名</h4>
+        						</div>
+        					</div><!--// .yui-gf -->
+        				</div><!--// .yui-b -->
+        			</div><!--// yui-main -->
+        		</div><!--// bd -->
+
+        		<div id="ft">
+        			<p>邓海军 &mdash; <a href="mailto:hbdhj@sina.com">hbdhj@sina.com</a></p>
+        		</div><!--// footer -->
+
+        	</div><!-- // inner -->
+
+
+        </div><!--// doc -->
     </body>
 </html>
