update chinese version

--- a/resume/简历.html
+++ b/resume/简历.html
@@ -21,7 +21,7 @@
 
         				<div class="yui-u">
         					<div class="contact-info">
-        						<h3><a id="pdf" href="resume.html">英语版</a></h3>
+        						<h3><a id="pdf" href="resume.html">英语版本</a></h3>
         						<h3><a href="mailto:hbdhj@sina.com">hbdhj@sina.com</a></h3>
         					</div><!--// .contact-info -->
         				</div>
