--- a/resume/resume.html
+++ b/resume/resume.html
@@ -17,6 +17,7 @@
         				<div class="yui-u first">
         					<h1>Haijun Deng</h1>
         					<h2>Senior Software Engineer</h2>
+        					<h2>Birth: Sept. 1979</h2>
         				</div>
 
         				<div class="yui-u">
