--- a/resume/简历.html
+++ b/resume/简历.html
@@ -17,6 +17,7 @@
         				<div class="yui-u first">
         					<h1>邓海军</h1>
         					<h2>高级软件工程师</h2>
+        					<h2>出生年月：1979年9月</h2>
         				</div>
 
         				<div class="yui-u">
