update resume a little

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -39,7 +39,7 @@
         						</div>
         						<div class="yui-u">
         							<p class="enlarge">
-        								8+ years C/C++ programing on Unix-like system. 5+ years development on large-scale distributed system(>100 nodes). Good understanding on data structure and algorithm. Fluent English and strong self-study skills.
+        								8+ years C/C++ programing on Unix-like system. 5+ years development on large-scale distributed system(>100 nodes). Proficient in python and other scripts. Fimiliar with telecommunication network and protocols. Good understanding on data structure and algorithm. Fluent English and strong self-study skills.
         							</p>
         						</div>
         					</div><!--// .yui-gf -->
