--- a/resume/简历.html
+++ b/resume/简历.html
@@ -39,7 +39,7 @@
         						</div>
         						<div class="yui-u">
         							<p class="enlarge">
-        								八年Linux/HP-Unix/Solaris C/C++商业软件开发经验，五年大型分布式系统开发经验(>100 节点)，三年Python开发经验，熟悉数据结构及算法，学习能力强
+        								八年Linux/HP-Unix/Solaris C/C++商业软件开发经验，五年大型分布式系统开发经验(>100 节点)，三年Python及脚本开发经验，精通电信网络结构及协议，熟悉数据结构及算法，学习能力强
         							</p>
         						</div>
         					</div><!--// .yui-gf -->
