not include comments

--- a/resume/github代码行数.html
+++ b/resume/github代码行数.html
@@ -11,6 +11,7 @@
     </head>
     <body onload="load()">
         <h3 align="center">按主要语言分github上邓海军的代码行数</h3>
+        <h5 align="center">注释与空行已被排除</h5>
         <h5 align="center"><a href="简历.html">回到简历</a></h5>
         <canvas id="codelines"></canvas>
     </body>
