--- a/resume/github-code.html
+++ b/resume/github-code.html
@@ -8,7 +8,8 @@
         <title>Haijun Deng's code on github</title>
     </head>
     <body onload="load()">
-        <h3 align="center">lines of Haijun Deng's code on github by language</h3>
+        <h3 align="center">lines of Haijun Deng's code on github by language </h3>
+        <h5 align="center">comments and blank lines <i>NOT</i> included</h5>
         <h5 align="center"><a href="resume.html">Back to resume</a></h5>
         <canvas id="codelines"></canvas>
     </body>
